# MarbleMachine

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  Makefile.bak  MarbleMachine.files  MarbleMachine.includes  build-android
android/: .project  AndroidManifest.xml
android/jni/: Android.mk  Application.mk  CMakeLists.txt  gl_code.cpp  jniinterface.cpp  os_calls.cpp
android/jni/nv/: Android.mk  Application.mk  nv_debug.h
android/jni/nv/nv_apk_file/: nv_apk_file.c  nv_apk_file.h
android/jni/nv/nv_file/: nv_file.c  nv_file.h
android/jni/nv/nv_sound/: nv_sound.cpp  nv_sound.h
android/jni/nv/nv_thread/: nv_thread.c  nv_thread.h
android/res/values/: strings.xml
android/src/com/nvidia/devtech/: AudioHelper.java  NvAPKFileHelper.java
android/src/net/leifandersen/mobile/android/marblemachine/: MainActivity.java  MainLib.java  MainView.java
android/tests/: .classpath  .project  AndroidManifest.xml  build.xml  local.properties
android/tests/res/values/: strings.xml
assets/: font.txt  marble.mtl
assets/buttons/: counter.button  medium_planet.button  won_level.button
assets/levels/: galaxy.lvl  level_1_1.lvl  level_1_17.lvl  level_1_2.lvl  level_1_3.lvl  level_1_4.lvl  level_1_5.lvl  level_1_6.lvl  level_4_2.lvl  sector_1.lvl
assets/meshes/: active_planet.blend  particle.blend
assets/sounds/: 67460__qubodup__explosion_3.flac  67462__qubodup__explosion_5.flac
core/: CMakeLists.txt  collision_grid.cpp  collision_grid.h  data_importer.cpp  data_importer.h  entity.cpp  entity.h  game_state.cpp  game_state.h  gl_code.cpp  glview.cpp  glview.h  include_opengl.h  input_converter.cpp  input_converter.h  main.cpp  main.h  matrix.cpp  matrix.h  menu.cpp  menu.h  os_calls.h  physics.cpp  physics.h  point.cpp  point.h
core/entities/: CMakeLists.txt  button.cpp  button.h  cannon.cpp  cannon.h  drawable.cpp  drawable.h  entity.cpp  entity.h  goal.cpp  goal.h  plank.cpp  plank.h  rotatable_entity.cpp  rotatable_entity.h  sphere.cpp  sphere.h
core/md2loader/: Main.cpp  Makefile.linux  Makefile.linux-mingw
core/objLoader/: objLoader.cpp  obj_list.cpp  obj_list.h  obj_parser.cpp  obj_parser.h
docs/: level_format  mesh_format
ios/MarbleMachine/: EAGLViewController.h  EAGLViewController.mm  MarbleMachine-Info.plist  MarbleMachine-Prefix.pch  MusicHandler.h  MusicHandler.m  main.m  os_calls.mm
ios/MarbleMachine.xcodeproj/: project.pbxproj
ios/MarbleMachine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/MarbleMachine.xcodeproj/project.xcworkspace/xcuserdata/superblockio.xcuserdatad/: UserInterfaceState.xcuserstate
ios/MarbleMachine.xcodeproj/xcuserdata/superblockio.xcuserdatad/xcschemes/: MarbleMachine.xcscheme  xcschememanagement.plist
ios/MarbleMachine/Classes/: EAGLView.h  EAGLView.m  MarbleMachineAppDelegate.h  MarbleMachineAppDelegate.m  MarbleMachineAppDelegate.mm
ios/MarbleMachine/Shaders/: Shader.fsh  Shader.vsh
levels/: galaxy.lvl  level_1_1.lvl  level_1_2.lvl  sector_1.lvl
licenses/: galaxy.txt  sound.txt  ufl.txt
meshes/: buttons.txt  font.txt  marble.blend  plank.blend  tex0.xcf
qt/: os_calls.cpp  qt.pro
sdl/: CMakeLists.txt  os_calls.cpp  sdl_main.cpp
tools/: blender_exporter.py  button_exporter.py  font_exporter.py  galactic_exporter.py  level_exporter.py  main_menu_exporter.py  menu_exporter.py  sector_exporter.py  zone_exporter.py
tools/GravityWell/GravityWellLevelEditor/: Editor.cpp  Editor.h  Elipse.cpp  Elipse.h  GravityWellLevelEditor.pro  Image.cpp  Image.h  Level.cpp  Level.h  LevelObject.cpp  LevelObject.h  Point.cpp  Point.h  editor.cpp  editor.h  level.cpp  level.h  main.cpp
tools/GravityWell/GravityWellMenuEditor/: Elipse.cpp  Elipse.h  GravityWellMenuEditor.pro  LevelObject.cpp  LevelObject.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
tools/GravityWell/TextureMapper/: Cursor.cpp  Cursor.h  Mapper.cpp  Mapper.h  TextureField.cpp  TextureField.h  TextureMapper.pro  application.qrc  main.cpp
tools/GravityWell/TextureMapper-build-desktop/: Makefile  moc_Mapper.cpp
tools/GravityWell/TextureMapper-build-desktop/TextureMapper.app/Contents/: Info.plist
tools/GravityWell/TextureMapper-build-desktop/TextureMapper.app/Contents/MacOS/: TextureMapper
